--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,13 @@ flutter:
           - asset : assets/fonts/Poppins/Poppins-Bold.ttf
           - asset : assets/fonts/Poppins/Poppins-Medium.ttf
           - asset : assets/fonts/Poppins/Poppins-Regular.ttf
+      - family: Montserrat
+        fonts: 
+          - asset : assets/fonts/Montserrat/Montserrat-Bold.ttf
+          - asset : assets/fonts/Montserrat/Montserrat-Medium.ttf
+          - asset : assets/fonts/Montserrat/Montserrat-Regular.ttf
+          - asset : assets/fonts/Montserrat/Montserrat-SemiBold.ttf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
