--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_launcher_icons: ^0.10.0
   like_button: ^2.0.4
   firebase_core: ^1.24.0
+  firebase_storage: ^10.3.10
 
 
 
