--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^10.3.11
   path_provider: ^2.0.11
+  font_awesome_flutter: ^10.2.1
 
 
 
